# learn-python

./: .config.yaml  .gitignore  LICENSE  README.md  README.rst  public_keys.pem  pyproject.toml  setup.cfg
.github/workflows/: test.yml
docs/source/: conf.py  index.rst  module1.rst  module2.rst  preamble.rst  refs.rst
docs/source/_static/: learn_python.css  learn_python.js  termynal.css  termynal.js
docs/source/help/: commands.rst  course.rst  delphi.rst  overview.rst
docs/source/module2/: gateway2_0.rst  gateway2_1.rst  gateway2_2.rst  gateway2_3.rst  gateway2_4.rst  part1.rst  part10.rst  part11.rst  part12.rst  part13.rst  part14.rst  part15.rst  part16.rst  part2.rst  part3.rst  part4.rst  part5.rst  part6.rst  part7.rst  part8.rst  part9.rst
learn_python/: __init__.py  client.py  doc.py  register.py  utils.py
learn_python/delphi/: openai.py  test.py  tutor.py
learn_python/module1/: Module1.key  PythonVirtualEnvironments.drawio  gateway1.py  gateway1.txt  hello_world.py
learn_python/module1/resources/: Module1.key  git.drawio
learn_python/module1_tools/resources/: git.drawio
learn_python/module2_basics/: Module2.key  __init__.py  gateway2.py  lesson.py
learn_python/module2_basics/gateway2/: __init__.py  task0_is_even.py  task10_type_divide.py  task11_get_decimal.py  task12_get_element.py  task13_split.py  task14_decimate.py  task15_combine.py  task16_split_name.py  task17_label_names.py  task18_format_constant.py  task19_format_constant2.py  task1_is_odd.py  task20_ends_with.py  task21_are_same_object.py  task22_list_difference.py  task23_deduplicate.py  task24_separate.py  task25_get_slices.py  task26_list_intersection.py  task27_fibonacci.py  task28_identity_matrix.py  task29_is_identity.py  task2_is_even_safe.py  task32_float_range.py  (+16 more)
learn_python/module2_data_types/: Module2.key  demo.py  gateway2.py
learn_python/preamble/: ComputerMentalModel.drawio  MyProgram.py  OperatingSystem - The Conductor.ai  Processes&Threads.drawio  PythonIsInterpretted.drawio  git.drawio  view_pyc_file.py
learn_python/tests/: conftest.py  module1.py  module2.py  tasks.py  tests.py  utils.py
learn_python/tutor/: api.key  openai.py  tutor.py
(+28 files in other folders)
