[tool.poetry]
name = "learn-python"
version = "0.1.0"
description = "Download Python into your brains."
authors = ["Brian Kohan <bckohan@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "learn_python"}]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^8.14.0"
pytest = "^7.4.0"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
