[tool.poetry]
name = "learn-python"
version = "0.1.0"
description = "Download Python into your brains."
authors = ["Brian Kohan <bckohan@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "learn_python"}]

[tool.poetry.scripts]
module2 = 'learn_python.module2_basics.lesson:run'

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
ipython = "^8.14.0"
pytest = "^7.4.0"
ipdb = "^0.13.13"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
scipy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
