[tool.poetry]
name = "learn-python"
version = "0.1.0"
description = "Download Python into your brains."
authors = ["Brian Kohan <bckohan@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "learn_python"}]

[tool.poetry.scripts]
module2 = 'learn_python.module2_basics.lesson:run'
doc = 'learn_python.doc:app'
delphi = 'learn_python.delphi.tutor:delphi'
register = 'learn_python.register:register'
report = 'learn_python.register:report'

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
ipython = "^8.14.0"
pytest = "^7.4.0"
ipdb = "^0.13.13"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
scipy = "^1.11.2"
typer = "^0.9.0"
rich = "^13.5.2"
openai = "^0.28.0"
termcolor = "^2.3.0"
python-dateutil = "^2.8.2"
pytest-timeout = "^2.1.0"
cryptography = "^41.0.3"
pyyaml = "^6.0.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.5"
sphinx-rtd-theme = "^1.3.0"
sphinxcontrib-youtube = "^1.2.0"
sphinxcontrib-jquery = "^4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
